--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -31,7 +31,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textEmailAddress"
-            android:hint="@string/email_hint"/>
+            android:hint="@string/email_hint"
+            android:onClick="emailTextFieldClicked"/>
 
         <EditText
             android:id="@+id/sign_up_username"
@@ -39,7 +40,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="@string/username"/>
+            android:hint="@string/username"
+            android:onClick="usernameTextFieldClicked" />
 
         <EditText
             android:id="@+id/sign_up_pswd"
@@ -47,7 +49,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPassword"
-            android:hint="@string/password"/>
+            android:hint="@string/password"
+            android:onClick="passwordTextFieldClicked"/>
 
         <EditText
             android:id="@+id/repeat_pswd"
@@ -55,7 +58,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPassword"
-            android:hint="@string/repeat_password_hint"/>
+            android:hint="@string/repeat_password_hint"
+            android:onClick="repeatPasswordEditTextClicked"/>
 
         <Button
             android:id="@+id/sign_up_button"
