sign in with firebase implemented

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,8 @@
             android:id="@+id/sign_in_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/sign_in" />
+            android:text="@string/sign_in"
+            android:onClick="signInButtonClicked"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
