--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,11 +31,11 @@
 
 
     <TextView
-        android:id="@+id/myAwesomeTextView"
+        android:id="@+id/debugTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:text="Escriba el mensaje y luego clickee el canal a ser enviado"
+        android:text="DEBUG MESSAGE"
         android:textSize="20sp" />
 
 
