--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -31,8 +31,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textEmailAddress"
-            android:hint="@string/email_hint"
-            android:onClick="emailTextFieldClicked"/>
+            android:hint="@string/email_hint" />
 
         <EditText
             android:id="@+id/sign_up_username"
@@ -40,8 +39,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="@string/username"
-            android:onClick="usernameTextFieldClicked" />
+            android:hint="@string/username" />
 
         <EditText
             android:id="@+id/sign_up_pswd"
@@ -49,8 +47,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPassword"
-            android:hint="@string/password"
-            android:onClick="passwordTextFieldClicked"/>
+            android:hint="@string/password" />
 
         <EditText
             android:id="@+id/repeat_pswd"
@@ -58,8 +55,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPassword"
-            android:hint="@string/repeat_password_hint"
-            android:onClick="repeatPasswordEditTextClicked"/>
+            android:hint="@string/repeat_password_hint" />
 
         <Button
             android:id="@+id/sign_up_button"
