--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|top"
-        android:text="SignIn"
+        android:text="@string/sign_in"
         android:padding="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="25dp"
