--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -143,7 +143,8 @@
                 android:id="@+id/EditEventSubmit"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/event_submit" />
+                android:text="@string/event_submit"
+                android:onClick="sendEventSubmit"/>
         </LinearLayout>
     </ScrollView>
 
