--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="redIllegalField">#48E91E63</color>
-    <color name="white">#FFFFFF</color>>
+    <color name="white">#FFFFFF</color>
+    <color name="color1">#424549</color>
+    <color name="color2">#A5B0B5</color>
 </resources>
