Integrated calendar url into Event edit page

--- a/app/src/main/res/layout/activity_event_details_page.xml
+++ b/app/src/main/res/layout/activity_event_details_page.xml
@@ -38,5 +38,14 @@
         android:layout_below="@id/title"
         android:layout_marginTop="5dp"
         />
-
+    <Button
+        android:id="@+id/schedule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|top"
+        android:text="Schedule"
+        android:padding="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="25dp"
+        android:paddingRight="10dp"/>
 </RelativeLayout>
