--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -137,6 +137,25 @@
                         android:inputType="date" />
 
                 </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/EditEventCalendarHint"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/event_calendar_hint" />
+
+                    <EditText
+                        android:id="@+id/EditEventCalendar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:autofillHints="..."
+                        android:hint="@string/event_calendar_hint"
+                        android:inputType="textShortMessage"
+                        android:singleLine="true" />
+                </TableRow>
             </TableLayout>
 
             <Button
