--- a/app/src/main/res/layout/activity_event_details_page.xml
+++ b/app/src/main/res/layout/activity_event_details_page.xml
@@ -55,4 +55,14 @@
         android:layout_height="match_parent"
         android:layout_below="@id/EditEventOrganizers"/>
 
+    <Button
+        android:id="@+id/schedule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|top"
+        android:text="Schedule"
+        android:padding="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="25dp"
+        android:paddingRight="10dp"/>
 </RelativeLayout>
