EventPage adapted just in case

--- a/app/src/main/res/layout/activity_event_details_page.xml
+++ b/app/src/main/res/layout/activity_event_details_page.xml
@@ -13,8 +13,7 @@
         android:layout_height="100dp"
         android:id="@+id/event_details_img"
         android:src="@mipmap/ic_launcher"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="match_parent"
