--- a/app/src/main/res/layout/activity_organizer_invite.xml
+++ b/app/src/main/res/layout/activity_organizer_invite.xml
@@ -24,7 +24,8 @@
             android:layout_height="wrap_content"
             android:text="Log in to view the invite"
             android:textAlignment="center"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:id="@+id/organizer_invite_text"/>
 
         <Button
             android:id="@+id/invite_sign_in_button"
