modified id for reset button

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -30,7 +30,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <EditText
-            android:id="@+id/email_reset"
+            android:id="@+id/reset_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
