--- a/app/src/main/res/layout/activity_organizer_invite.xml
+++ b/app/src/main/res/layout/activity_organizer_invite.xml
@@ -22,7 +22,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Log in to view the invite"
+            android:text="@string/organizer_invite_text"
             android:textAlignment="center"
             android:padding="10dp"
             android:id="@+id/organizer_invite_text"/>
