--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -23,6 +23,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
+            <ToggleButton
+                android:id="@+id/button_favorite"
+                android:layout_width="44dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/button_favorite"
+                android:checked="false"
+                android:text=""
+                android:textOff=""
+                android:textOn="" />
+
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
