--- a/app/src/main/res/layout/activity_front_page.xml
+++ b/app/src/main/res/layout/activity_front_page.xml
@@ -6,16 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".frontPage.FrontPageActivity">
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/maven_pro"
         android:text="POLY CROWD"
         android:textColor="#000000"
-        android:textSize="49sp"
-        android:layout_marginTop="40dp"
-        android:layout_centerHorizontal="true"
-        />
+        android:textSize="49sp" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
