--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,10 +34,18 @@
         android:paddingRight="10dp"/>
 
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Request Location"
+        android:id="@+id/buttonLocation"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/buttonLocation"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
 
@@ -47,19 +55,13 @@
             android:layout_height="wrap_content"
             android:text="Coordinates: "
             android:textSize="30sp"
-            android:id="@+id/textView"
+            android:id="@+id/locView"
             android:layout_below="@+id/button"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
     </ScrollView>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Request Lcation"
-        android:id="@+id/button"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
