--- a/app/src/main/res/layout/activity_front_page.xml
+++ b/app/src/main/res/layout/activity_front_page.xml
@@ -8,7 +8,7 @@
     tools:context=".frontPage.FrontPageActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/frontPageTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -26,7 +26,8 @@
         android:layout_marginTop="26dp"
         android:clipToPadding="false"
         android:foregroundGravity="center"
-        android:overScrollMode="never">
+        android:overScrollMode="never"
+        android:background="@android:color/transparent">
 
     </androidx.viewpager.widget.ViewPager>
 
