--- a/app/src/main/res/layout/activity_front_page.xml
+++ b/app/src/main/res/layout/activity_front_page.xml
@@ -39,7 +39,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="34dp"
         android:layout_marginTop="6dp"
-        android:text="description :" />
+        android:text="description : \n cdhfhdfjfdhjdfh" />
 
     <Button
         android:id="@+id/button"
