--- a/app/src/main/res/layout/activity_user_profile_page.xml
+++ b/app/src/main/res/layout/activity_user_profile_page.xml
@@ -13,53 +13,62 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="564dp"
+        android:layout_marginTop="40dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5">
 
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:src="@drawable/default_user_pic"
-            android:layout_gravity="center_horizontal"/>
 
         <TextView
+            android:id="@+id/usernameField"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/username" />
 
         <TextView
+            android:id="@+id/emailField"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/email" />
 
     </LinearLayout>
 
-
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/goToFriendsListButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="36dp"
+        android:onClick="onFriendsListClick"
         android:text="@string/goToUserFriendsList"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/goToUserEventsListButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:onClick="onEventsListClick"
         android:text="@string/goToUserEventsList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/goToFriendsListButton" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/default_user_pic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="133dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
