--- a/app/src/main/res/layout/activity_event_details_page.xml
+++ b/app/src/main/res/layout/activity_event_details_page.xml
@@ -11,12 +11,35 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:id="@+id/event_details_img"
-            android:src="@mipmap/ic_launcher"
-            android:layout_centerHorizontal="true" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/event_img_layout"
+            android:layout_centerHorizontal="true">
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:id="@+id/event_details_img"
+                android:src="@mipmap/ic_launcher"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_centerHorizontal="true"
+                tools:ignore="MissingConstraints" />
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_toRightOf="@id/event_details_img"
+                android:src="@drawable/ic_edit_black_24dp"
+                app:layout_constraintBottom_toBottomOf="@+id/event_details_img"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:ignore="PrivateResource"
+                android:background="@color/white_transparent"
+                android:layout_marginBottom="5dp"
+                android:layout_marginHorizontal="5dp"
+                android:visibility="invisible"
+                android:id="@+id/event_details_edit_img"
+                android:onClick="onEditImageClicked"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:layout_width="match_parent"
@@ -26,7 +49,7 @@
             android:textSize="22sp"
             android:textColor="#000"
             android:textStyle="bold"
-            android:layout_below="@id/event_details_img"
+            android:layout_below="@id/event_img_layout"
             />
 
         <TextView
@@ -74,7 +97,7 @@
             android:text="Submit Changes"
             android:id="@+id/event_details_submit"
             android:visibility="invisible"
-            android:onClick="onSubmitChangesClicked"/>
+            android:onClick="onSubmitChangesClicked" />
 
         <Button
             android:id="@+id/schedule"
@@ -93,7 +116,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_edit_black_24dp"
+        android:src="@drawable/ic_edit_white_24dp"
         tools:ignore="PrivateResource"
         app:fabSize="normal"
         app:backgroundTint="@color/color2"
