--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="white">#FFFFFF</color>
     <color name="color1">#424549</color>
     <color name="color2">#A5B0B5</color>
+    <color name="white_transparent">#88FFFFFF</color>
 
 </resources>
