--- a/app/src/main/res/layout/activity_schedule_page.xml
+++ b/app/src/main/res/layout/activity_schedule_page.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ScheduleActivity">
+    tools:context=".schedulePage.ScheduleActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
